--- a/config
+++ b/config
@@ -3,3 +3,4 @@ BOOKS_FILE="data/books.csv";
 CHAPTERS_FILE="data/chapters.csv";
 ICON_FILE="imgs/icon.png";
 BAR_SIZES_FILE="data/bar_sizes.csv";
+LINES_FILE="data/lines.csv";
