--- a/config
+++ b/config
@@ -1,6 +1,6 @@
-DB_FILENAME="data/db.sqlite3";
-BOOKS_FILE="data/books.csv";
-CHAPTERS_FILE="data/chapters.csv";
-ICON_FILE="imgs/icon.png";
-BAR_SIZES_FILE="data/bar_sizes.csv";
-LINES_FILE="data/lines.csv";
+DB_PATH="data/db.sqlite3";
+BOOKS_PATH="data/books.csv";
+CHAPTERS_PATH="data/chapters.csv";
+ICON_PATH="imgs/icon.png";
+BAR_SIZES_PATH="data/bar_sizes.csv";
+LINES_PATH="data/lines.csv";
